# aoc

2022/: aoc2022.opam  dune-project
2022/days/: day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  dune  utils.ml
2023/: ols.json  run.sh
2023/day1/: day1.odin
2023/day2/: day2.odin
2023/day3/: day3.odin
2023/day4/: day4.odin
2023/day5/: day5.odin
2023/dependencies/utils/: utils.odin
