(lang dune 3.8)

(name aoc2022)

(generate_opam_files true)

(package
 (name aoc2022)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
